--- a/nym-node-status-api/nym-node-status-ui/package.json
+++ b/nym-node-status-api/nym-node-status-ui/package.json
@@ -19,6 +19,7 @@
     "@mui/x-charts": "^8.8.0",
     "@mui/x-date-pickers": "^7.29.4",
     "@tanstack/react-query": "^5.83.0",
+    "d3-array": "^3.2.4",
     "dayjs": "^1.11.13",
     "material-react-table": "^3.2.1",
     "next": "^15.4.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@tanstack/react-query-devtools": "^5.83.0",
+    "@types/d3-array": "^3.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
