--- a/sdk/rust/nym-sdk/Cargo.toml
+++ b/sdk/rust/nym-sdk/Cargo.toml
@@ -47,6 +47,10 @@ nym-sphinx-addressing = { path = "../../../common/nymsphinx/addressing" }
 nym-bin-common = { path = "../../../common/bin-common", features = [
     "basic_tracing",
 ] }
+
+nym-ip-packet-client = { git = "https://github.com/nymtech/nym-vpn-client", rev = "5c3aacfce158aac73cbd3fd905d90269f8bacc01" } # max/re-export-test https://github.com/nymtech/nym-vpn-client/commit/5c3aacfce158aac73cbd3fd905d90269f8bacc01
+# nym-gateway-directory
+
 bytecodec = { workspace = true }
 httpcodec = { workspace = true }
 bytes = { workspace = true }
