temp commit: got gateway dir dependency working, moving on to vpn-api-client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -127,6 +127,7 @@ members = [
     "nym-credential-proxy/nym-credential-proxy-requests",
     "nym-credential-proxy/vpn-api-lib-wasm",
     "nym-data-observatory",
+    "nym-gateway-directory",
     "nym-ip-packet-client",
     "nym-network-monitor",
     "nym-node",
@@ -156,6 +157,7 @@ members = [
 #    "tools/internal/sdk-version-bump",
     "tools/internal/ssl-inject",
     "tools/internal/testnet-manager",
+    "tools/internal/testnet-manager/dkg-bypass-contract",
     "tools/internal/testnet-manager/dkg-bypass-contract",
     "tools/internal/validator-status-check",
     "tools/nym-cli",
