--- a/nym-ip-packet-client/Cargo.toml
+++ b/nym-ip-packet-client/Cargo.toml
@@ -15,10 +15,10 @@ workspace = true
 bincode.workspace = true
 bytes.workspace = true
 futures.workspace = true
+nym-gateway-directory = { path = "../nym-gateway-directory" }
+nym-ip-packet-requests = { path = "../common/ip-packet-requests" }
+nym-sdk = {path = "../sdk/rust/nym-sdk" }
 thiserror.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
 tracing.workspace = true
-
-nym-sdk = { path = "../sdk/rust/nym-sdk" }
-nym-ip-packet-requests = { path = "../common/ip-packet-requests" }
