squashed feature/offline-signers-contract branch (#5901)
removed placeholder mod

updated contract schema

remove duplicate import

queries tests

tx tests

ensure placeholder is deprecated so that clippy catches it

contract storage tests

ignore panics in legacy tests

missing performance contract schema changes

they weren't caught as the contract was missing from the makefile

dealing with CI

generated contract schema

client traits

query for exposing signing status at particular height

uses placeholder data due to another PR in progress at the time of writing

wip

removed placeholder mod

removed dead code

contract queries

resetting offline status of sender

implemented TestableNymContract for OfflineSigner, DKG, CW4 and CW3 contracts

basic logic for voting on offline signers

init offline signers contract

--- a/contracts/Makefile
+++ b/contracts/Makefile
@@ -1,4 +1,4 @@
-schema: coconut-dkg-schema mixnet-schema vesting-schema multisig-schema group-schema ecash-schema
+schema: coconut-dkg-schema mixnet-schema vesting-schema multisig-schema group-schema ecash-schema nym-pool-schema performance-schema offline-signers-schema
 
 coconut-dkg-schema:
 	$(MAKE) -C coconut-dkg generate-schema
@@ -17,3 +17,12 @@ multisig-schema:
 
 group-schema:
 	$(MAKE) -C multisig/cw4-group generate-schema
+
+nym-pool-schema:
+	$(MAKE) -C nym-pool generate-schema
+
+performance-schema:
+	$(MAKE) -C performance generate-schema
+
+offline-signers-schema:
+	$(MAKE) -C offline-signers generate-schema
