--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "multisig/cw4-group",
     "vesting",
     "performance",
+    "offline-signers",
 ]
 
 [workspace.package]
@@ -54,6 +55,7 @@ semver = "1.0.21"
 serde = "1.0.196"
 sylvia = "1.3.3"
 schemars = "0.8.16"
+itertools = "0.14.0"
 
 thiserror = "2.0.11"
 
