--- a/nym-gateway-directory/Cargo.toml
+++ b/nym-gateway-directory/Cargo.toml
@@ -15,8 +15,8 @@ nym-common = { git = "https://github.com/nymtech/nym-vpn-client/", rev = "c7e38a
 nym-http-api-client = { path = "../common/http-api-client" }
 nym-offline-monitor = { git = "https://github.com/nymtech/nym-vpn-client/", rev = "c7e38aae038748f7d577a8b1ae02931fff97e868" } # nym-vpn-core 1.11.0
 nym-vpn-api-client = { git = "https://github.com/nymtech/nym-vpn-client/", rev = "c7e38aae038748f7d577a8b1ae02931fff97e868" } # nym-vpn-core 1.11.0
-nym-sphinx = { path = "../common/nymsphinx" } # replaces the types pulled in from nym-sdk
-nym-topology = { path = "../common/topology" } # replaces the types pulled in from nym-sdk
+nym-sphinx = { path = "../common/nymsphinx" } # replaces the types pulled in from nym-sdk in nym-vpn-client repo
+nym-topology = { path = "../common/topology" } # replaces the types pulled in from nym-sdk in nym-vpn-client repo
 nym-validator-client = { path = "../common/client-libs/validator-client" }
 nym-crypto = { path = "../common/crypto", features = [
     "rand",
