--- a/Cargo.toml
+++ b/Cargo.toml
@@ -309,6 +309,7 @@ petgraph = "0.6.5"
 pin-project = "1.1"
 pnet_packet = "0.35.0"
 pin-project-lite = "0.2.16"
+pnet_packet = "0.35.0"
 publicsuffix = "2.3.0"
 proc_pidinfo = "0.1.3"
 quote = "1"
