--- a/nym-data-observatory/Cargo.toml
+++ b/nym-data-observatory/Cargo.toml
@@ -18,6 +18,7 @@ async-trait.workspace = true
 axum = { workspace = true, features = ["tokio"] }
 chrono = { workspace = true }
 clap = { workspace = true, features = ["cargo", "derive", "env"] }
+cosmrs = { workspace = true }
 nym-config = { path = "../common/config" }
 nym-bin-common = { path = "../common/bin-common", features = ["output_format"] }
 nym-network-defaults = { path = "../common/network-defaults" }
@@ -28,6 +29,7 @@ nyxd-scraper-shared = { path = "../common/nyxd-scraper-shared" }
 reqwest = { workspace = true, features = ["rustls-tls"] }
 schemars = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "time"] }
 thiserror = { workspace = true }
 time = { workspace = true }
