--- a/nym-credential-proxy/nym-credential-proxy/Cargo.toml
+++ b/nym-credential-proxy/nym-credential-proxy/Cargo.toml
@@ -62,13 +62,16 @@ nym-http-api-common = { path = "../../common/http-api-common", features = [
     "utoipa",
     "middleware",
 ] }
+nym-http-api-client = { path = "../../common/http-api-client", default-features = false }
 nym-validator-client = { path = "../../common/client-libs/validator-client" }
 nym-network-defaults = { path = "../../common/network-defaults" }
 
 nym-credential-proxy-requests = { path = "../nym-credential-proxy-requests", features = [
     "openapi",
 ] }
+nym-upgrade-mode-check = { path = "../../common/upgrade-mode-check" }
 nym-ecash-signer-check = { path = "../../common/ecash-signer-check" }
+nym-pemstore = { path = "../../common/pemstore" }
 
 nym-credential-proxy-lib = { path = "../../common/credential-proxy" }
 
