--- a/nym-node/Cargo.toml
+++ b/nym-node/Cargo.toml
@@ -130,7 +130,12 @@ criterion = { workspace = true, features = ["async_tokio"] }
 rand_chacha = { workspace = true }
 
 [features]
-tokio-console = ["console-subscriber", "nym-task/tokio-tracing"]
+default = ["otel"] # 🚨🚨🚨 TODO: remove otel as a default feature 🚨🚨🚨
+tokio-console = ["console-subscriber"]
+otel = [
+
+]
+
 
 [lints]
 workspace = true
