--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "license": "Apache 2.0",
   "workspaces": [
-    "dist/wasm/**",
-    "dist/node/**",
-    "dist/ts/**",
-    "sdk/typescript/packages/mui-theme",
-    "sdk/typescript/packages/react-components",
-    "sdk/typescript/packages/validator-client",
+    "sdk/typescript/packages/**",
+    "sdk/typescript/examples/**",
     "ts-packages/*",
     "nym-wallet",
     "explorer-nextjs",
     "explorer-v2",
     "types",
-    "clients/validator"
+    "clients/validator",
+    "sdk/typescript/packages/**",
+    "sdk/typescript/examples/**",
+    "sdk/typescript/codegen/**"
   ],
   "scripts": {
     "nuke": "npx rimraf **/node_modules node_modules",
