--- a/wasm/client/Cargo.toml
+++ b/wasm/client/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "nym-client-wasm"
-authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>", "Jedrzej Stuczynski <andrew@nymtech.net>"]
+authors = [
+    "Dave Hrycyszyn <futurechimp@users.noreply.github.com>",
+    "Jedrzej Stuczynski <andrew@nymtech.net>",
+]
 version = "1.4.0-rc.0"
 edition = "2021"
 keywords = ["nym", "sphinx", "wasm", "webassembly", "privacy"]
@@ -21,7 +24,11 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen = { workspace = true }
-wasm-bindgen-futures = { workspace = true }
+# wasm-bindgen-futures = { workspace = true } # see if promise_to_futures is broken in workspace version (.49)
+wasm-bindgen-futures = { version = "0.4.50" }
+gloo-timers = "0.3.0"
+once_cell = { workspace = true }
+
 thiserror = { workspace = true }
 tsify = { workspace = true, features = ["js"] }
 
