--- a/wasm/client/Cargo.toml
+++ b/wasm/client/Cargo.toml
@@ -24,8 +24,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
 wasm-bindgen = { workspace = true }
-# wasm-bindgen-futures = { workspace = true } # see if promise_to_futures is broken in workspace version (.49)
-wasm-bindgen-futures = { version = "0.4.50" }
+wasm-bindgen-futures = { workspace = true }
 gloo-timers = "0.3.0"
 once_cell = { workspace = true }
 
