--- a/sdk/rust/nym-sdk/Cargo.toml
+++ b/sdk/rust/nym-sdk/Cargo.toml
@@ -71,9 +71,19 @@ tokio-util.workspace = true
 uuid = { workspace = true, features = ["v4", "serde"] }
 bincode = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-tracing.workspace = true
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
+# tracing.workspace = true
+# tracing-subscriber = { workspace = true, features = ["env-filter"] }
 dirs.workspace = true
+
+opentelemetry = { workspace = true }
+opentelemetry_sdk = { workspace = true }
+
+tracing = { workspace = true, features = ["std"] }
+tracing-subscriber = { workspace = true, features = ["registry", "std"] }
+tracing-core = { workspace = true }
+tracing-opentelemetry = { workspace = true }
+opentelemetry-otlp.workspace = true
+opentelemetry-semantic-conventions.workspace = true
 
 [dev-dependencies]
 anyhow = { workspace = true }
