ns-api: remove sqlite support
ns-api: add env var to skip migrations for local dev

ns-api: tidy up imports

ns-api: fix deserialisation fo node descriptions

update dockerfile

update README

fix up README and example env

ns-api: bump major version to 4

ns-api: add more geoip data and new performance field in dvpn responses

--- a/nym-node-status-api/nym-node-status-api/.env.example
+++ b/nym-node-status-api/nym-node-status-api/.env.example
@@ -1,11 +1,7 @@
 # Example environment variables for nym-node-status-api
 
-# Database configuration
-# For SQLite:
-# DATABASE_URL=sqlite://nym-node-status-api.sqlite
-
-# For PostgreSQL:
-# DATABASE_URL=postgres://testuser:testpass@localhost:5433/nym_node_status_api_test
+# Database configuration for PostgreSQL:
+DATABASE_URL=postgres://testuser:testpass@localhost:5433/nym_node_status_api_test
 
 # Network configuration
 NETWORK_NAME=sandbox
