module documentation and unit tests

--- a/common/task/Cargo.toml
+++ b/common/task/Cargo.toml
@@ -30,8 +30,13 @@ workspace = true
 workspace = true
 features = ["tokio"]
 
+[features]
+tokio-tracing = ["tokio/tracing"]
+
 [dev-dependencies]
+anyhow = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "test-util", "macros"] }
+nym-test-utils = { path = "../test-utils" }
 
 [lints]
 workspace = true
