--- a/nym-node/Cargo.toml
+++ b/nym-node/Cargo.toml
@@ -130,7 +130,7 @@ criterion = { workspace = true, features = ["async_tokio"] }
 rand_chacha = { workspace = true }
 
 [features]
-tokio-console = ["console-subscriber"]
+tokio-console = ["console-subscriber", "nym-task/tokio-tracing"]
 
 [lints]
 workspace = true
