--- a/common/http-api-client/Cargo.toml
+++ b/common/http-api-client/Cargo.toml
@@ -14,7 +14,6 @@ license.workspace = true
 default=["tunneling"]
 tunneling=[]
 network-defaults = ["dep:nym-network-defaults"]
-axum_test = ["axum-test"]
 
 [dependencies]
 async-trait = { workspace = true }
@@ -30,6 +29,7 @@ serde_plain = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 itertools = { workspace = true }
+inventory = "0.3.1"
 
 # used for decoding text responses (they were already implicitly included)
 bytes = { workspace = true }
