--- a/common/http-api-client-macro/Cargo.toml
+++ b/common/http-api-client-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "http-api-client-macro"
+name = "nym-http-api-client-macro"
 version = "0.1.0"
 authors.workspace = true
 repository.workspace = true
