--- a/common/http-api-client-macro/Cargo.toml
+++ b/common/http-api-client-macro/Cargo.toml
@@ -15,7 +15,7 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1"
-syn = { version = "2.0.106", features = ["full"] }
+syn = { workspace = true, features = ["full"] }
 quote = "1.0.40"
 
 [lints]
