--- a/common/http-api-client-macro/Cargo.toml
+++ b/common/http-api-client-macro/Cargo.toml
@@ -17,6 +17,7 @@ proc-macro = true
 proc-macro2 = "1"
 syn = { workspace = true, features = ["full"] }
 quote = "1.0.40"
+inventory = { workspace = true }
 
 [lints]
 workspace = true
