--- a/common/http-api-client/Cargo.toml
+++ b/common/http-api-client/Cargo.toml
@@ -29,7 +29,7 @@ serde_plain = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 itertools = { workspace = true }
-inventory = "0.3.1"
+inventory = { workspace = true }
 
 # used for decoding text responses (they were already implicitly included)
 bytes = { workspace = true }
