--- a/common/http-api-client/Cargo.toml
+++ b/common/http-api-client/Cargo.toml
@@ -39,6 +39,7 @@ mime = { workspace = true }
 nym-http-api-common = { path = "../http-api-common", default-features = false }
 nym-bin-common = { path = "../bin-common" }
 nym-network-defaults = { path = "../network-defaults", optional = true }
+nym-http-api-client-macro = { path = "../http-api-client-macro" }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies]
 hickory-resolver = { workspace = true, features = ["https-ring", "tls-ring", "webpki-roots"] }
