extracted the rest of the features into the shared lib

--- a/nym-credential-proxy/nym-credential-proxy-requests/Cargo.toml
+++ b/nym-credential-proxy/nym-credential-proxy-requests/Cargo.toml
@@ -37,5 +37,5 @@ features = ["tokio"]
 [features]
 default = ["query-types"]
 query-types = ["nym-http-api-common", "nym-http-api-common/output"]
-openapi = ["utoipa"]
+openapi = ["utoipa", "nym-http-api-common/utoipa"]
 tsify = ["dep:tsify", "wasm-bindgen"]
