--- a/common/credential-proxy/Cargo.toml
+++ b/common/credential-proxy/Cargo.toml
@@ -12,11 +12,13 @@ readme.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+axum = { workspace = true }
 bip39 = { workspace = true, features = ["zeroize"] }
 bs58 = { workspace = true }
 futures = { workspace = true }
 humantime = { workspace = true }
 rand = { workspace = true }
+reqwest = { workspace = true, features = ["rustls-tls"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
@@ -28,6 +30,7 @@ tokio = { workspace = true, features = ["sync"] }
 tokio-util = { workspace = true, features = ["rt"] }
 tracing = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
+url = { workspace = true }
 zeroize = { workspace = true }
 
 nym-credentials = { path = "../credentials" }
