fix: Address critical issues in client configuration registry implementation
- Fixed HeaderMapInit parsing bug that would cause compilation errors
- Added comprehensive documentation with usage examples and DSL reference
- Improved error handling with better error messages for invalid headers
- Added test coverage for both macro and registry functionality
- Added debug inspection capabilities for registered configurations
- Fixed module name conflicts in tests by using separate modules

All tests now passing:
- 7 macro tests validating DSL parsing and code generation
- 4 registry tests verifying configuration collection and application

--- a/common/http-api-client-macro/Cargo.toml
+++ b/common/http-api-client-macro/Cargo.toml
@@ -19,5 +19,9 @@ syn = { workspace = true, features = ["full"] }
 quote = "1.0.40"
 proc-macro-crate = "3"
 
+[dev-dependencies]
+nym-http-api-client = { path = "../http-api-client" }
+reqwest = { workspace = true }
+
 [lints]
 workspace = true
