--- a/explorer-v2/biome.json
+++ b/explorer-v2/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules", ".next", "public"]
+    "ignore": ["node_modules", ".next", "public", "src/app/lib/strapi.d.ts"]
   },
   "formatter": {
     "enabled": true,
