--- a/common/http-api-client-macro/Cargo.toml
+++ b/common/http-api-client-macro/Cargo.toml
@@ -18,10 +18,14 @@ proc-macro2 = "1"
 syn = { workspace = true, features = ["full"] }
 quote = "1.0.40"
 proc-macro-crate = "3"
+uuid = { version = "1.0", features = ["v4"] }
 
 [dev-dependencies]
 nym-http-api-client = { path = "../http-api-client" }
 reqwest = { workspace = true }
+
+[features]
+debug-inventory = []
 
 [lints]
 workspace = true
