--- a/common/http-api-client/Cargo.toml
+++ b/common/http-api-client/Cargo.toml
@@ -14,6 +14,7 @@ license.workspace = true
 default=["tunneling"]
 tunneling=[]
 network-defaults = ["dep:nym-network-defaults"]
+debug-inventory = ["nym-http-api-client-macro/debug-inventory"]
 
 [dependencies]
 async-trait = { workspace = true }
