Gross hack to keep channel alive when hunting other bugs

--- a/wasm/client/Cargo.toml
+++ b/wasm/client/Cargo.toml
@@ -30,6 +30,7 @@ once_cell = { workspace = true }
 
 thiserror = { workspace = true }
 tsify = { workspace = true, features = ["js"] }
+web-sys = { workspace = true }
 
 nym-bin-common = { path = "../../common/bin-common" }
 wasm-client-core = { path = "../../common/wasm/client-core" }
