--- a/explorer-v2/package.json
+++ b/explorer-v2/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:prod": "SKIP_NX_CACHE=true yarn --cwd .. build && next build",
+    "build:prod": "yarn --cwd .. build && next build",
     "start": "next start",
     "lint": "biome check --fix"
   },
