--- a/sdk/typescript/packages/react-components/package.json
+++ b/sdk/typescript/packages/react-components/package.json
@@ -48,12 +48,12 @@
     "@babel/core": "^7.17.5",
     "@nymproject/eslint-config-react-typescript": "^1.0.0",
     "@storybook/addon-actions": "9.0.8",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/addon-links": "9.1.5",
-    "@storybook/builder-webpack5": "9.1.5",
-    "@storybook/manager-webpack5": "^6.5.8",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "0.2.2",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-webpack5": "^8.4.7",
+    "@storybook/testing-library": "0.2.1",
     "@svgr/webpack": "^6.1.1",
     "@types/flat": "^5.0.2",
     "@types/react": "^18.0.26",
@@ -91,8 +91,5 @@
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook"
   },
-  "sideEffects": false,
-  "resolutions": {
-    "nx": "^21.0.0"
-  }
+  "sideEffects": false
 }
