--- a/sdk/typescript/packages/react-components/package.json
+++ b/sdk/typescript/packages/react-components/package.json
@@ -56,11 +56,11 @@
     "@storybook/testing-library": "0.2.1",
     "@svgr/webpack": "^6.1.1",
     "@types/flat": "^5.0.2",
+    "@types/minimatch": "^5.1.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "@types/minimatch": "^3.0.5",
     "babel-loader": "^8.2.3",
     "babel-plugin-root-import": "^5.1.0",
     "eslint": "^8.10.0",
@@ -80,7 +80,9 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@nymproject/types": "1.0.0",
+    "@nymproject/mui-theme": "1.0.0"
   },
   "scripts": {
     "clean": "rimraf dist",
