--- a/explorer-v2/package.json
+++ b/explorer-v2/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "prebuild": "yarn --cwd ../sdk/typescript/packages/react-components build",
+    "prebuild": "yarn --cwd ../ts-packages/types build && yarn --cwd ../sdk/typescript/packages/mui-theme build && yarn --cwd ../sdk/typescript/packages/react-components build",
     "build:prod": "yarn --cwd .. build && next build",
     "start": "next start",
     "lint": "biome check --fix"
