--- a/ts-packages/types/package.json
+++ b/ts-packages/types/package.json
@@ -29,7 +29,8 @@
     "ts-jest": "^27.0.5",
     "jest": "^27.1.0",
     "babel-plugin-root-import": "^5.1.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "@types/minimatch": "^5.1.2"
   },
   "scripts": {
     "clean": "rimraf dist",
