Fixed time runtime err

--- a/common/nymsphinx/chunking/Cargo.toml
+++ b/common/nymsphinx/chunking/Cargo.toml
@@ -24,3 +24,4 @@ nym-metrics = { path = "../../nym-metrics" }
 nym-crypto = { path = "../../crypto", version = "0.4.0", features = [
     "asymmetric",
 ] }
+wasmtimer = { workspace = true }
