--- a/.github/workflows/ci-contracts-upload-binaries.yml
+++ b/.github/workflows/ci-contracts-upload-binaries.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-22.04 ]
+        platform: [ arc-ubuntu-22.04 ]
 
     runs-on: ${{ matrix.platform }}
     env:
@@ -28,8 +28,18 @@ jobs:
           mkdir -p $OUTPUT_DIR
           echo $OUTPUT_DIR
 
+      - name: Install Rust stable
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - name: Install cosmwasm-check
+        run: cargo install cosmwasm-check --locked
+
       - name: Build release contracts
-        run: docker run --rm -v ${{ github.workspace }}:/code --workdir /code cosmwasm/workspace-optimizer:0.14.1
+        run: make publish-contracts
 
       - name: Prepare build output
         shell: bash
