passing ticketbook data to gateway probe

--- a/nym-node-status-api/nym-node-status-client/Cargo.toml
+++ b/nym-node-status-api/nym-node-status-client/Cargo.toml
@@ -15,6 +15,7 @@ readme.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+bs58 = { workspace = true }
 bincode = { workspace = true }
 nym-crypto = { path = "../../common/crypto", features = ["asymmetric", "serde", ] }
 nym-credentials = { path = "../../common/credentials" }
