Skip locked rows

--- a/nym-node-status-api/nym-node-status-api/Cargo.toml
+++ b/nym-node-status-api/nym-node-status-api/Cargo.toml
@@ -71,6 +71,7 @@ sqlx = { workspace = true, features = [
     "runtime-tokio-rustls",
     "macros",
     "migrate",
+    "postgres",
 ] }
 
 [dev-dependencies]
